syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "CommonThemeExtraProto";
option objc_class_prefix = "CommonThemeExtra";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// Defines a Visual Theme
message VisualThemeData {
    option (routines.entity_type) = "VisualTheme";
    option (routines.keys).keys = "visual_theme_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: visualThemeId
    // fields
    string visual_theme_id = 1 [json_name = "visual_theme_id", (google.api.graphql.relay_options).id = true];
    string visual_theme_set_id = 2 [json_name = "visual_theme_set_id"];
    string description = 3 [json_name = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];
    
        

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9;
}


message VisualThemeList{
    repeated VisualThemeData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListVisualThemes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
}


// Contains All Visual Theme Resources
message VisualThemeResourceData {
    option (routines.entity_type) = "VisualThemeResource";
    option (routines.keys).keys = "visual_theme_id, resource_type_enum_id, sequence_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: visualThemeId, resourceTypeEnumId, sequenceId
    // fields
    string visual_theme_id = 1 [json_name = "visual_theme_id"];
    string resource_type_enum_id = 2 [json_name = "resource_type_enum_id"];
    string sequence_id = 3 [json_name = "sequence_id"];
    string resource_value = 4 [json_name = "resource_value"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];
    string id = 7 [json_name = "id", (google.api.graphql.relay_options).id = true];
    
        

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message VisualThemeResourceList{
    repeated VisualThemeResourceData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListVisualThemeResources` method to retrieve the next
    // page of results.
    string next_page_token = 2;
}


